--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "express-session": "^1.16.2",
     "passport": "^0.4.0",
